[metadata]
description-file = README.md
url = https://github.com/muckamuck/lambda-tool

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[bumpversion]
current_version = 0.0.0
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:lambdatool/__init__.py]

[bumpversion:file:lambdatool/command.py]
