[bumpversion]
current_version = 0.7.0
commit = True
tag = False

[metadata]
description-file = README.md
url = https://github.com/muckamuck/lambda-tool

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]

[bumpversion:file:README.md]

[bumpversion:file:lambdatool/__init__.py]

[bumpversion:file:lambdatool/command.py]

[bumpversion:file:lambdatool/template/service/.lambdatool]

[bumpversion:file:lambdatool/template/simple/.lambdatool]

[bumpversion:file:lambdatool/lambda_deployer.py]

